--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -11051,15 +11051,6 @@ body {
   box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
 }
 
-.search-dumb-mq-tester {
-  display: none;
-}
-@media (min-width: 576px) {
-  .search-dumb-mq-tester {
-    display: block;
-  }
-}
-
 .search__suggest,
 .search__suggest::after {
   position: absolute;
@@ -11158,7 +11149,11 @@ body {
    Content
 */
 .content {
-  padding: calc(74px + 2rem) 1rem;
+  padding: 2rem 1rem;
+}
+
+.header + .content {
+  padding-top: calc(74px + 2rem);
 }
 
 /*
@@ -11249,15 +11244,6 @@ body {
 @media (min-width: 768px) {
   .sidebar.is-open ~ .sidebar-backdrop {
     display: none;
-  }
-}
-
-.overlaying-sidebar-mq-test-elem {
-  display: none;
-}
-@media (min-width: 768px) {
-  .overlaying-sidebar-mq-test-elem {
-    display: block;
   }
 }
 
@@ -11393,6 +11379,73 @@ body {
 }
 
 /*
+  Toolbar for detailed views (image view, family images view)
+*/
+.toolbar {
+  position: sticky;
+  z-index: 199;
+  left: 0;
+  right: 0;
+  top: 0;
+  display: flex;
+  flex-grow: 0;
+  height: 72px;
+  padding: 0.907rem 1rem;
+  background: #212121;
+  white-space: nowrap;
+}
+
+.toolbar__main,
+.toolbar__aside {
+  flex-grow: 0;
+}
+
+.toolbar__main {
+  margin-left: -1rem;
+}
+@media (min-width: 450px) {
+  .toolbar__main {
+    margin-left: 0;
+  }
+}
+
+.toolbar__aside {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-left: auto;
+  white-space: nowrap;
+  margin-right: -1rem;
+}
+@media (min-width: 450px) {
+  .toolbar__aside {
+    margin-right: 0;
+  }
+}
+
+.toolbar__specific-actions {
+  padding-right: 0.2rem;
+}
+@media (min-width: 450px) {
+  .toolbar__specific-actions {
+    padding-right: 0.5rem;
+  }
+}
+
+.toolbar__main-actions {
+  border-left: 1px solid #424242;
+  padding-left: 0.2rem;
+}
+@media (min-width: 450px) {
+  .toolbar__main-actions {
+    padding-left: 0.5rem;
+  }
+}
+
+.toolbar + .content {
+  padding-top: 0;
+}
+
+/*
   Image view
 */
 .image-view {
@@ -11422,60 +11475,7 @@ body {
 .image-view__toolbar {
   position: absolute;
   z-index: 2;
-  left: 0;
-  right: 0;
-  display: flex;
-  flex-grow: 0;
-  height: 72px;
-  padding: 0.907rem 1rem;
   background-color: rgba(33, 33, 33, 0.5);
-  white-space: nowrap;
-}
-
-.image-view__toolbar-main,
-.image-view__toolbar-aside {
-  flex-grow: 0;
-}
-
-.image-view__toolbar-main {
-  margin-left: -1rem;
-}
-@media (min-width: 450px) {
-  .image-view__toolbar-main {
-    margin-left: 0;
-  }
-}
-
-.image-view__toolbar-aside {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-left: auto;
-  white-space: nowrap;
-  margin-right: -1rem;
-}
-@media (min-width: 450px) {
-  .image-view__toolbar-aside {
-    margin-right: 0;
-  }
-}
-
-.image-view__image-actions {
-  padding-right: 0.2rem;
-}
-@media (min-width: 450px) {
-  .image-view__image-actions {
-    padding-right: 0.5rem;
-  }
-}
-
-.image-view__main-actions {
-  border-left: 1px solid #424242;
-  padding-left: 0.2rem;
-}
-@media (min-width: 450px) {
-  .image-view__main-actions {
-    padding-left: 0.5rem;
-  }
 }
 
 .image-view__pic {
