--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -10847,6 +10847,58 @@ body {
 }
 
 /*
+  Remove list-specific styling
+*/
+.nolist {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+/*
+  Definition list
+*/
+.dlist,
+.dlist > dt,
+.dlist > dd {
+  margin: 0;
+}
+
+.dlist_0 > dt,
+.dlist_0 > dd {
+  display: inline;
+}
+
+.dlist_0 > dd:after {
+  content: "\a";
+  white-space: pre;
+  display: block;
+  line-height: 5px;
+  height: 5px;
+}
+
+/*
+  <dd> which gets stretched to all available space
+*/
+.dlist-flexline .dlist-flexline__cell {
+  display: table-cell;
+}
+
+dt.dlist-flexline__cell {
+  white-space: nowrap;
+  width: 1%;
+}
+
+dd.dlist-flexline__cell {
+  width: 100%;
+}
+
+.dlist-flexline__content {
+  display: inline-flex;
+  width: 100%;
+}
+
+/*
     Page wrapper
 */
 .wrapper {
@@ -11071,7 +11123,6 @@ body {
 
 .search__suggest-content {
   max-height: 200px;
-  overflow-x: auto;
 }
 
 .is-suggesting .search__suggest {
@@ -11170,7 +11221,7 @@ body {
   bottom: 0;
   display: flex;
   flex-direction: column;
-  will-change: transform;
+  will-change: transform, visibility;
   transform: translateX(-100%);
   transition: visibility 0.2s, transform 0.2s;
   outline: none;
@@ -11219,7 +11270,6 @@ body {
 
 .sidebar__body {
   flex-grow: 1;
-  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -11625,20 +11675,9 @@ html::-webkit-scrollbar-track,
   background: transparent;
 }
 
-/*
-  Definition list
-*/
-.dlist_0 > dt,
-.dlist_0 > dd {
-  display: inline;
-}
-
-.dlist_0 > dd:after {
-  content: "\a";
-  white-space: pre;
-  display: block;
-  line-height: 5px;
-  height: 5px;
+.scrollbar {
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 /*
