Fix `.upload-bar` max-width

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1000,8 +1000,7 @@ $drop-target-transition-duration: .2s;
   background-color: $notification-bg;
   width: $upload-bar-width;
   height: $upload-bar-height;
-  max-width: calc(#{$upload-bar-width} - #{$notification-screen-gap * 2});
-  //font-size: 1.1rem;
+  max-width: calc(100% - #{$notification-screen-gap * 2});
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
