--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -11876,7 +11876,7 @@ textarea::-webkit-scrollbar-track {
   background-color: #424242;
   width: 400px;
   height: 80px;
-  max-width: calc(400px - 2rem);
+  max-width: calc(100% - 2rem);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
