--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -11440,7 +11440,7 @@ body {
 .toolbar__main {
   margin-left: -1rem;
 }
-@media (min-width: 450px) {
+@media (min-width: 490px) {
   .toolbar__main {
     margin-left: 0;
   }
@@ -11453,7 +11453,7 @@ body {
   white-space: nowrap;
   margin-right: -1rem;
 }
-@media (min-width: 450px) {
+@media (min-width: 490px) {
   .toolbar__aside {
     margin-right: 0;
   }
@@ -11462,7 +11462,7 @@ body {
 .toolbar__specific-actions {
   padding-right: 0.2rem;
 }
-@media (min-width: 450px) {
+@media (min-width: 490px) {
   .toolbar__specific-actions {
     padding-right: 0.5rem;
   }
@@ -11472,10 +11472,40 @@ body {
   border-left: 1px solid #424242;
   padding-left: 0.2rem;
 }
-@media (min-width: 450px) {
+@media (min-width: 490px) {
   .toolbar__main-actions {
     padding-left: 0.5rem;
   }
+}
+
+.toolbar__specific-actions-more {
+  display: none;
+}
+@media (min-width: 440px) {
+  .toolbar__specific-actions-more {
+    display: inline;
+  }
+}
+
+.toolbar__specific-actions-toggle,
+.toolbar__specific-actions-toggle + label {
+  display: inline-block;
+}
+@media (min-width: 440px) {
+  .toolbar__specific-actions-toggle,
+.toolbar__specific-actions-toggle + label {
+    display: none;
+  }
+}
+
+.toolbar__specific-actions-toggle-icon-close,
+.toolbar__specific-actions-toggle:checked + label .toolbar__specific-actions-toggle-icon-open {
+  display: none;
+}
+
+.toolbar__specific-actions-toggle:checked ~ .toolbar__specific-actions-more,
+.toolbar__specific-actions-toggle:checked + label .toolbar__specific-actions-toggle-icon-close {
+  display: inline;
 }
 
 .toolbar + .content {
