Search-by-image uploading UI

--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -4694,12 +4694,7 @@ textarea.form-control-lg {
   text-align: center;
   white-space: nowrap;
   background-color: #333333;
-  transition: width 0.6s ease;
-}
-@media (prefers-reduced-motion: reduce) {
-  .progress-bar {
-    transition: none;
-  }
+  transition: none;
 }
 
 .progress-bar-striped {
@@ -10976,6 +10971,24 @@ body {
   position: static;
 }
 
+.search__image-progress {
+  height: 3px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  display: none;
+}
+
+.search__image-progress > .progress-bar {
+  background-color: #bb86fc;
+}
+
+.is-searching-by-image .search__image-progress {
+  display: flex;
+}
+
 .search__field {
   display: none;
   text-align: left;
@@ -10992,6 +11005,9 @@ body {
   display: block;
 }
 
+.search__field-show {
+  position: relative;
+}
 @media (min-width: 576px) {
   .search__field-show {
     display: none;
@@ -11024,6 +11040,19 @@ body {
   clip: rect(0, 0, 0, 0) !important;
   white-space: nowrap !important;
   border: 0 !important;
+}
+
+.search__field-image-search-spinner {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-left: calc(-1rem - 4px);
+  margin-top: calc((-1rem / 2) - 2px);
+}
+
+.is-searching-by-image .search__field-image-search-spinner {
+  display: block;
 }
 
 .search__infield-action {
@@ -11783,7 +11812,7 @@ textarea::-webkit-scrollbar-track {
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 999;
+  z-index: 2999;
   background-color: rgba(33, 33, 33, 0.95);
   opacity: 0;
   visibility: hidden;
