--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -12051,3 +12051,23 @@ a.upload-bar {
   bottom: -0.7em;
   z-index: -1;
 }
+
+/*
+  Login page
+*/
+.login {
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 1rem;
+}
+
+.login__form {
+  width: 300px;
+  max-width: 100%;
+}
+
+.login__submit-btn {
+  width: 100%;
+}
